--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"/>
     <title>bee epic</title>
 </head>
+
 <body>
+    <header class="header">
+        <div class="header-container-title">
+            <h1 class="header-box">Bee</h1>
+            <h1 class="header-box">Colla<span style="color: black;">bee</span>rate</h1>    
+        </div>  
+        <div class="header-container-user">
+            <h1 class="header-box">msg</h1>
+            <h1 class="header-box">usr</h1>
+        </div>
+    </header>
     <h1> shoutout tto the bees</h1>
+
+    <p>info about bees</p>
+
+    <p>
+        i am another element that contains a <span>and also</span>
+        <a href="https://youtu.be/23b-uwda5tQ?si=FYgCsL7Lg_b0MrSv">epic link</a>
+    </p>
+
+    <ul>
+        <li class="">item one</li>
+        <li>two</li>
+        <li>three</li>
+    </ul>
 </body>
 </html>
