--- a/src/index.html
+++ b/src/index.html
@@ -4,33 +4,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"/>
+    <script src="app.js"></script>
     <title>bee epic</title>
 </head>
 
 <body>
     <header class="header">
         <div class="header-container-title">
-            <h1 class="header-box">Bee</h1>
+            <img id="bee-icon"  class="web-icon" src="images/00.png">
             <h1 class="header-box">Colla<span style="color: black;">bee</span>rate</h1>    
         </div>  
         <div class="header-container-user">
-            <h1 class="header-box">msg</h1>
-            <h1 class="header-box">usr</h1>
+            <a href="https://youtu.be/-5UNt-CxoQ8?si=4uU7Jmg2huvs9--s&t=36" target="_blank">
+                <img class="header-icon" src="images/mail.png" alt="messages"/>
+            </a>
+            <a href="https://youtu.be/-5UNt-CxoQ8?si=4uU7Jmg2huvs9--s&t=36" target="_blank">
+                <img class="header-icon" src="images/bee-user.png" alt="user">
+            </a>
         </div>
     </header>
-    <h1> shoutout tto the bees</h1>
 
-    <p>info about bees</p>
-
-    <p>
-        i am another element that contains a <span>and also</span>
-        <a href="https://youtu.be/23b-uwda5tQ?si=FYgCsL7Lg_b0MrSv">epic link</a>
-    </p>
-
-    <ul>
-        <li class="">item one</li>
-        <li>two</li>
-        <li>three</li>
-    </ul>
+    <section>
+        <input type="text"></input>
+        <input type="text"></input>
+        <button>Search!</button>
+    </section>
+    <div class="content">
+        <div class="posts">
+            <section class="card selected">
+                <h1>Title</h1>
+                <ul>
+                    <li>cool</li>
+                    <li>smart</li>
+                    <li>skilled</li>
+                    <li>cool</li>
+                </ul>
+                <span>date: 01/01/01</span>
+            </section>
+            <section class="card">
+                <h1>Title</h1>
+                <ul>
+                    <li>cool</li>
+                    <li>smart</li>
+                    <li>skilled</li>
+                    <li>cool</li>
+                </ul>
+                <span>date: 01/01/01</span>
+            </section>
+            <section class="card">
+                <h1>Title</h1>
+                <ul>
+                    <li>cool</li>
+                    <li>smart</li>
+                    <li>skilled</li>
+                    <li>cool</li>
+                </ul>
+                <span>date: 01/01/01</span>
+            </section>
+        </div>
+        <div class="active-post">
+            <h1>
+                Animated short film: looking for VA
+            </h1>
+            </div>
+    </div>
 </body>
 </html>
