--- a/src/home.html
+++ b/src/home.html
@@ -21,41 +21,47 @@
             </ul>
         </nav>
     </header>
-    <section>
-        <input type="text"></input>
-        <input type="text"></input>
+    <section class="search">
+        <input type="text" size=15 placeholder="Fields..."></input>
+        <input type="text" size=15 placeholder="Place of study..."></input>
         <button>Search!</button>
     </section>
     <div class="content">
         <div class="posts">
             <section class="card selected">
-                <h1>Title</h1>
-                <ul>
-                    <li>cool</li>
-                    <li>smart</li>
-                    <li>skilled</li>
-                    <li>cool</li>
-                </ul>
+                <div class="container">
+                    <h1>Title</h1>
+                    <ul>
+                        <li>cool</li>
+                        <li>smart</li>
+                        <li>skilled</li>
+                        <li>cool</li>
+                    </ul>
+                </div>
                 <span>date: 01/01/01</span>
             </section>
             <section class="card">
-                <h1>Title</h1>
-                <ul>
-                    <li>cool</li>
-                    <li>smart</li>
-                    <li>skilled</li>
-                    <li>cool</li>
-                </ul>
+                <div class="container">
+                    <h1>Title</h1>
+                    <ul>
+                        <li>cool</li>
+                        <li>smart</li>
+                        <li>skilled</li>
+                        <li>cool</li>
+                    </ul>
+                </div>
                 <span>date: 01/01/01</span>
             </section>
             <section class="card">
-                <h1>Title</h1>
-                <ul>
-                    <li>cool</li>
-                    <li>smart</li>
-                    <li>skilled</li>
-                    <li>cool</li>
-                </ul>
+                <div class="container">
+                    <h1>Title</h1>
+                    <ul>
+                        <li>cool</li>
+                        <li>smart</li>
+                        <li>skilled</li>
+                        <li>cool</li>
+                    </ul>
+                </div>
                 <span>date: 01/01/01</span>
             </section>
         </div>
