loading posts from json plus extra

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
             <h1 class="header-box">Colla<span style="color: black;">bee</span>rate</h1>    
         </div>  
         <div class="header-container-user">
+            <a href="listing.html" class="header-box">+</h1></a>
             <a href="https://youtu.be/-5UNt-CxoQ8?si=4uU7Jmg2huvs9--s&t=36" target="_blank">
                 <img class="header-icon" src="images/mail.png" alt="messages"/>
             </a>
@@ -24,49 +25,33 @@
         </div>
     </header>
 
-    <section>
-        <input type="text"></input>
-        <input type="text"></input>
+    <section class="search">
+        <input type="text" size=15 placeholder="Fields..."></input>
+        <input type="text" size=15 placeholder="Place of study..."></input>
         <button>Search!</button>
     </section>
     <div class="content">
         <div class="posts">
-            <section class="card selected">
-                <h1>Title</h1>
-                <ul>
-                    <li>cool</li>
-                    <li>smart</li>
-                    <li>skilled</li>
-                    <li>cool</li>
-                </ul>
-                <span>date: 01/01/01</span>
-            </section>
             <section class="card">
-                <h1>Title</h1>
-                <ul>
-                    <li>cool</li>
-                    <li>smart</li>
-                    <li>skilled</li>
-                    <li>cool</li>
-                </ul>
-                <span>date: 01/01/01</span>
-            </section>
-            <section class="card">
-                <h1>Title</h1>
-                <ul>
-                    <li>cool</li>
-                    <li>smart</li>
-                    <li>skilled</li>
-                    <li>cool</li>
-                </ul>
-                <span>date: 01/01/01</span>
+                <div class="container" id="post">
             </section>
         </div>
         <div class="active-post">
-            <h1>
-                Animated short film: looking for VA
-            </h1>
+            <div class="text">
+                <h1>
+                    Animated short film: looking for VA
+                </h1>
+                <div>
+                    Some of their interaction:
+                    Rachel: I’m gonna smoke a ciggie, you in? 
+                    Anne: What’s a ciggie anyway?
+                    Rachel: Cigarette - or you’re too much of a good girl? 
+                    Anne: Hey, I’m a grown up okay? 
+                    Rachel: Nah, you’re still too young kiddo.
+                </div>
             </div>
+            <div class="hexagon"></div>
+        </div>
     </div>
 </body>
 </html>
