--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,6 @@
             </a>
         </div>
     </header>
-
     <section class="search">
         <input type="text" size=15 placeholder="Fields..."></input>
         <input type="text" size=15 placeholder="Place of study..."></input>
@@ -32,8 +31,43 @@
     </section>
     <div class="content">
         <div class="posts">
+            <section class="card selected">
+                <div class="container">
+                    <h2>Script Writer</h2>
+                    <ul>
+                        <li>Creativity</li>
+                        <li>Strong storytelling skills</li>
+                        <li>Understanding of character development</li>
+                        <li>Dialogue mastery</li>
+                        <li>Attention to detail</li>
+                    </ul>
+                </div>
+                <span>date: 01/01/01</span>
+            </section>
             <section class="card">
-                <div class="container" id="post">
+                <div class="container">
+                    <h2>Voice Actor</h2>
+                    <ul>
+                        <li>Versatile vocal range</li>
+                        <li>Clear diction and articulation</li>
+                        <li>Strong emotional expression</li>
+                        <li>Pacing and timing</li>
+                        <li>Consistency</li>
+                    </ul>
+                </div>
+                <span>date: 01/01/01</span>
+            </section>
+            <section class="card">
+                <div class="container">
+                    <h2>Title</h2>
+                    <ul>
+                        <li>cool</li>
+                        <li>smart</li>
+                        <li>skilled</li>
+                        <li>cool</li>
+                    </ul>
+                </div>
+                <span>date: 01/01/01</span>
             </section>
         </div>
         <div class="active-post">
