--- a/src/listing.html
+++ b/src/listing.html
@@ -26,13 +26,31 @@
 <body>
     <a href="index.html"><h1>exit</h1></a>
 
-    <div class="create-listing-container">
-        <dev class ="create-listing-box">
-            <h1>skdkos</h1>
-            <h1>skdkos</h1>
-        </dev>
-        <h1 class ="create-listing-box">hi</h1>
-    </div>
+    <div class="listing-container">
+        <div class="listing-container-item">
+            <h1>Create Listing</h1>
+            <div class="listing-container-input">
+                <div class="listing-container-input-left" id="role-input"><h2>Role:</h2></div>
+                <div class="listing-container-input-right"><input/></div>
+            </div>
+            <div class="listing-container-input">
+                <div class="listing-container-input-left" id="project-input"><h2>Project:</h2></div>
+                <div class="listing-container-input-right"><input/></div>
+            </div>
+            <div class="listing-container-input">
+                <div class="listing-container-input-left" id="body-input"><h2>Body:</h2></div>
+                <div class="listing-container-input-right"><input/></div>
+            </div>
+            <div class="listing-container-input">
+                <div class="listing-container-input-left"><h2>Attachments</h2></div>
+                <div class="listing-container-input-right"><h2>image upload</h2></div>
+            </div>
+        </div>
+        <div class="listing-container-item">
+            <h1>Preview Listing</h1>
+
+        </div>
+    </div> 
     
 </body>
 </html>
