Add changes to index page

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"/>
     <script src="app.js"></script>
+    <script src="home.js" defer></script>
     <title>bee epic</title>
 </head>
 
@@ -69,6 +70,30 @@
                 </div>
                 <span>date: 01/01/01</span>
             </section>
+            <section class="card">
+                <div class="container">
+                    <h2>Title</h2>
+                    <ul>
+                        <li>cool</li>
+                        <li>smart</li>
+                        <li>skilled</li>
+                        <li>cool</li>
+                    </ul>
+                </div>
+                <span>date: 01/01/01</span>
+            </section>
+            <section class="card">
+                <div class="container">
+                    <h2>Title</h2>
+                    <ul>
+                        <li>cool</li>
+                        <li>smart</li>
+                        <li>skilled</li>
+                        <li>cool</li>
+                    </ul>
+                </div>
+                <span>date: 01/01/01</span>
+            </section>
         </div>
         <div class="active-post">
             <div class="text">
@@ -76,16 +101,33 @@
                     Animated short film: looking for VA
                 </h1>
                 <div>
-                    Some of their interaction:
-                    Rachel: I’m gonna smoke a ciggie, you in? 
-                    Anne: What’s a ciggie anyway?
-                    Rachel: Cigarette - or you’re too much of a good girl? 
-                    Anne: Hey, I’m a grown up okay? 
-                    Rachel: Nah, you’re still too young kiddo.
+                    About Us:Join our innovative and forward-thinking team at [Company Name], where we’re tackling 
+                    exciting challenges in [industry or field]! We’re on the lookout for a talented engineer who is 
+                    passionate about problem-solving and eager to contribute to cutting-edge projects. Our team thrives 
+                    on collaboration, creativity, and excellence, and we need a driven individual to help us take things 
+                    to the next level.
                 </div>
+                <span>What You'll Do:</span>
+                <ul>
+                    <li>Work closely with a multidisciplinary team to design, develop, and implement innovative solutions.</li>
+                    <li>Apply your engineering expertise to solve complex problems and optimize systems.</li>
+                    <li>Collaborate with stakeholders to ensure project goals are met on time and within scope.</li>
+                    <li>Participate in research and development initiatives to drive continuous improvement.</li>
+                    <li>Provide technical guidance and support across various departments.</li>
+                </ul>
+                <span>What We’re Looking For:</span>
+                <ul>
+                    <li>Bachelor's degree in [Engineering field] or related discipline (Master's degree preferred).</li>
+                    <li>Proven experience in [relevant industry or specific field].</li>
+                    <li>Strong knowledge of [specific tools, technologies, or methodologies relevant to the job].</li>
+                    <li>Excellent problem-solving skills and a keen attention to detail.</li>
+                </ul>
             </div>
-            <div class="hexagon"></div>
+            <div class="hexagon">
+                <button>Apply Now!</button>
+            </div>
         </div>
     </div>
+    <div id="triangle-right"></div>
 </body>
 </html>
