--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,9 @@
     <header class="header">
         <div class="header-container-title">
             <img id="bee-icon"  class="web-icon" src="images/00.png">
-            <h1 class="header-box">Colla<span style="color: black;">bee</span>rate</h1>    
+            <a href="index.html" style="text-decoration: none;">
+                <h1 class="header-box">Colla<span style="color: black;">bee</span>rate</h1> 
+            </a>   
         </div>  
         <div class="header-container-user">
             <a href="listing.html" class="header-box">
