--- a/src/index.html
+++ b/src/index.html
@@ -158,7 +158,7 @@
                 </ul>
             </div>
             <div class="hexagon">
-                <button>Apply Now!</button>
+                <a href="https://youtu.be/TJ4lG5Szr50?si=RLBQv8h6n1zbnRDN" target="_blank"><button>Apply Now!</button></a>
             </div>
         </div>
     </div>
